# paper-trail-backend

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  WHY.md  alembic.ini  pyproject.toml  render.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_debate_table.py  0002_evidence_pool.py
docs/: ARCHITECTURE.md  DEMO.md
docs/specs/: 00-state.md  01-nodes.md  02-graph.md  03-tools.md  04-llm-router.md  05-api.md  06-persistence.md  07-evals.md  08-evidence-pool.md  99-platform-integration.md
evals/: claims.yaml  report.md  run_eval.py
src/paper_trail/: __init__.py  main.py
src/paper_trail/agents/: graph.py  state.py
src/paper_trail/agents/nodes/: _citations.py  _format.py  judge.py  plan.py  proponent.py  render.py  skeptic.py
src/paper_trail/agents/prompts/: judge.md  plan.md  proponent.md  render.md  skeptic.md
src/paper_trail/agents/tools/: cite.py  fetch.py  search.py  transcript.py
src/paper_trail/api/: deps.py
src/paper_trail/core/: __init__.py  config.py  db.py  errors.py  langfuse.py  llm.py  platform_auth.py  prompts.py
src/paper_trail/models/: debate.py
src/paper_trail/platform/: health.py  logging.py  metrics.py  middleware.py  platform_token.py
src/paper_trail/repositories/: debates.py
src/paper_trail/schemas/: debates.py
src/paper_trail/services/: debates.py
tests/: test_health.py
tests/fixtures/: sample_article.html
tests/unit/: test_api_debates.py  test_api_deps.py  test_api_platform.py  test_config.py  test_db.py  test_evals.py  test_graph.py  test_langfuse.py  test_llm_router.py  test_migrations.py  test_nodes_citations.py  test_nodes_format.py  test_nodes_judge.py  test_nodes_plan.py  test_nodes_proponent.py  test_nodes_render.py  test_nodes_skeptic.py  test_platform_auth.py  test_platform_logging.py  test_platform_token.py  test_prompts.py  test_repository.py  test_schemas.py  test_service.py  test_service_langfuse.py  test_state.py  test_tools_cite.py  test_tools_fetch.py  test_tools_search.py  test_tools_transcript.py
(+2 files in other folders)
