[project]
name = "paper_trail"
version = "0.1.0"
description = "LangGraph multi-agent debate service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.3.6",
    "langgraph>=0.2.50",
    "langchain-core>=0.3.20",
    "langchain-openai>=0.2.10",
    "sse-starlette>=2.2",
    "httpx>=0.27",
    "tavily-python>=0.5",
    "trafilatura>=1.12",
    "voyageai>=0.3",
    "langfuse>=2.55",
    "prometheus-fastapi-instrumentator>=7.0",
    "upstash-redis>=1.2",
    "pyyaml>=6.0",
    "python-jose[cryptography]>=3.3",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-snapshot>=0.9",
    "respx>=0.21",
    "vcrpy>=6.0",
    "polyfactory>=2.18",
    "testcontainers[postgres]>=4.8",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_trail"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["paper_trail"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "trafilatura.*",
    "voyageai.*",
    "langfuse.*",
    "pgvector.*",
    "tavily.*",
    "upstash_redis.*",
    "prometheus_fastapi_instrumentator.*",
    "sse_starlette.*",
    "vcr.*",
    "jose.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: slow end-to-end tests (CI-only)",
    "integration: requires Testcontainers / real Postgres",
]
